# kvgit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: api.md  backends.md  content-types.md  gc.md  quick-start.md  versioned.md
gitkv/: __init__.py  errors.py  gc.py  live.py  namespaced.py  staged.py  store.py  versioned.py
gitkv/kv/: __init__.py
kvgit/: __init__.py  encoding.py  errors.py  gc_kv.py  git_versioned.py  hamt.py  live.py  namespaced.py  protocol.py  staged.py  store.py  versioned.py  versioned_gp.py  versioned_kv.py
kvgit/codecs/: __init__.py  _hash.py  base.py  numpy.py  pandas.py  pickler.py
kvgit/kv/: __init__.py  base.py  composite.py  disk.py  indexeddb.py  memory.py
kvgit/versioned/: __init__.py  base.py  gc.py  gp.py  helpers.py  keyset.py  kv.py  merge.py  protocol.py
kvit/: __init__.py  content_types.py  errors.py  gc.py  live.py  namespaced.py  staged.py  store.py  versioned.py
kvit/kv/: composite.py  memory.py
tests/: benchmark_codecs.py  benchmark_storage.py  conftest.py  stress_kill.py  test_content_types.py  test_gc.py  test_git_versioned.py  test_hamt.py  test_kv_composite.py  test_kv_disk.py  test_kv_memory.py  test_live.py  test_namespaced.py  test_staged.py  test_store_factory.py  test_versioned.py
tests/codecs/: conftest.py  test_factory_preset.py  test_gc.py  test_hash.py  test_numpy.py  test_pandas.py  test_pickler.py  test_staged_integration.py  test_v2_compat.py
tests/kv/: test_composite.py  test_disk.py  test_indexeddb.py  test_memory.py  test_pyodide_fs.py
tests/versioned/: test_conformance.py  test_gc.py  test_gp.py  test_keyset.py  test_kv.py
vkv/: __init__.py  errors.py  gc.py  namespaced.py  store.py  versioned.py
vkv/kv/: __init__.py  composite.py  write_behind.py
