[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kvgit"
version = "0.3.0"
description = "Versioned key-value store with git-like commit, branch, and merge semantics."
authors = [{ name = "ashenfad" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
keywords = ["versioning", "git", "key-value", "branching", "merge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/ashenfad/kvgit"
"Bug Tracker" = "https://github.com/ashenfad/kvgit/issues"
"Documentation" = "https://github.com/ashenfad/kvgit#readme"
"Source" = "https://github.com/ashenfad/kvgit"

[project.optional-dependencies]
disk = ["diskcache"]
numpy = ["numpy>=1.24"]
pandas = ["numpy>=1.24", "pandas>=2.0"]
scientific = ["numpy>=1.24", "pandas>=2.0"]
all = ["diskcache", "numpy>=1.24", "pandas>=2.0"]
dev = [
    "pytest",
    "diskcache",
    "ruff",
    "numpy>=1.24",
    "pandas>=2.0",
]

[tool.setuptools.packages.find]
include = ["kvgit*"]

[tool.mypy]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["diskcache"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
# Codec tests gate themselves with `pytest.importorskip(...)` before
# importing optional deps (numpy, pandas) and the matching codec modules,
# which forces module-level imports to follow the skip call. E402 is the
# wrong rule here — the pattern is the official pytest idiom.
"tests/codecs/*.py" = ["E402"]
